--- a/index-2.html
+++ b/index-2.html
@@ -3,7 +3,7 @@
   
 <!-- Mirrored from social.webestica.com/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 24 Nov 2022 08:33:25 GMT -->
 <head>
-  <title>Social - Network, Community and Event Theme</title>
+  <title>Social12 - Network, Community and Event Theme</title>
 
   <!-- Meta Tags -->
   <meta charset="utf-8">
@@ -2766,7 +2766,7 @@ Header END -->
       <!-- Dropzone photo START -->
       <div>
         <label class="form-label">Upload attachment</label>
-        <div class="dropzone dropzone-default card shadow-none" data-dropzone='{"maxFiles":2}'>
+        <div class="dropzone dropzone-default card shadow-none" data-dropzone='{"maxFiles":1}'>
           <div class="dz-message">
             <i class="bi bi-camera-reels display-3"></i>
                 <p>Drag here or click to upload video.</p>
